artifacthub/library/pod-security-policy/selinux/1.1.0/samples/psp-selinux-v2/example_allowed_without_selinux_opts.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx-selinux-allowed-without-selinux-opts
    labels:
        app: nginx-selinux
spec:
  containers:
  - name: nginx
    image: nginx
